Closed Bug 1381479 Opened 7 years ago Closed 7 years ago

Crash in mozilla::layers::MaskCombineOperation::Init

Categories

(Core :: Graphics, defect)

Unspecified
Windows 10
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla56
Tracking Status
firefox-esr52 --- unaffected
firefox54 --- unaffected
firefox55 --- unaffected
firefox56 --- fixed

People

(Reporter: marcia, Assigned: dvander)

References

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is 
report bp-0527e5b7-6460-44d9-8587-7bfe70170705.
=============================================================

Seen while looking at crash stats - crashes started using 20170702030204:

Possible regression range based on Build ID: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=587daa4bdc4b40b7053f4ca3b74723ca747f3b52&tochange=4d3de12dcdc539f14fcb06539da39fa7176c8955

Bug 1365879 touched code in this area. Not sure if it is related to that or not. ni on dvander.
Flags: needinfo?(dvander)
Yup, this is a bug in Advanced Layers. A texture allocation isn't null checked. Since the HRESULT reported is ERROR_INVALID_PARAMETER, my guess is that a layer with multiple masks is scrolled such that the overlapping area is (0, 0).
Assignee: nobody → dvander
Status: NEW → ASSIGNED
Flags: needinfo?(dvander)
Attached patch patchSplinter Review
This patch checks that CreateRenderTarget succeeded, and when it doesn't, makes the MaskOperation silently fail. I also added a check to not allocate 0-sized mask textures, and another fix to consider such masks as making the entire layer invisible so it never gets batched.
Attachment #8887178 - Flags: review?(bas)
Attachment #8887178 - Flags: review?(bas) → review+
Pushed by danderson@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/5df4ba09e140
Fix crash when ancestor masks have no overlapping area. (bug 1381479, r=bas)
https://hg.mozilla.org/mozilla-central/rev/5df4ba09e140
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: