Fix crash when ancestor masks have no overlapping area. (bug 1381479, r=bas)